src/app/components/score-progress/score-progress.component.scss
.progress-container{
  padding: 1rem 1rem 2rem 1rem;
}

.progress-track{
  position: relative;
  width:100%;
  height: 50px;
  background: #E6E9EE;
  border-radius: 10px;
}

.progress{
  position: absolute;
  top:0;
  bottom: 0;
  left: 0;
  border-radius: 10px;
  background: var(--ion-color-inria-correct-shade);
}

.progress-delta{
  position: absolute;
  top:0;
  bottom: 0;
  left: 60%;
  width:0;
  border-radius: 10px;
  background: var(--ion-color-inria-correct);
  transition: width 2s ease-in-out;
}

.progress-threshold{
  position: absolute;
  top:-10px;
  bottom: -15px;
  border-left: 4px solid var(--ion-color-inria-certificate);
  border-radius: 4px;

  &-label {
    position: absolute;
    top:calc(100% + 5px);
    right: 50%;
    color: var(--ion-color-inria-certificate);
    transform: translateX(50%);
    text-transform: uppercase;
    text-align: center;
    font-size: 0.75rem;
    font-weight: bold;
    line-height: 1;
  }

  ion-icon{
    display: block;
    position: absolute;
    top:calc(50% - 1.1rem);
    left: calc(50% - 1.1rem);
    font-size: 2rem;
  }
}

.progress-labels{
  display: flex;
  font-size: 12px;
  font-weight: bold;
  color: var(--ion-color-medium);
  justify-content: space-between;

  .progress-min{
  }

  .progress-max{
    text-align: right;
  }
}

